--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.fxn769:ariana:1.0'
     //
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // Firebase
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-analytics:17.4.1'
     implementation 'com.google.firebase:firebase-database:19.3.0'
     //
