--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: "androidx.navigation.safeargs"
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "ru.nowandroid.youtube.nowjsoupandroid"
+        applicationId "ru.nowandroid.youtube.rostselmash"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -28,7 +28,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // noinspection GradleCompatible
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     // Library from GitHub
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.2.0'
