--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="ru.nowandroid.youtube.nowjsoupandroid">
+    package="ru.nowandroid.youtube.rostselmash">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,8 +14,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity android:name=".ProfileActivity"/>
         <activity android:name=".HomeProfileActivity"/>
-        <activity android:name=".ProfileActivity" />
         <activity android:name=".NewsActivity"/>
         <activity
             android:name=".MainActivity"
@@ -27,5 +27,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
