--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     //
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // Firebase
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-analytics:17.4.1'
-    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
     //
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
