--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".HomeProfileActivity"></activity>
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".NewsActivity" />
         <activity
             android:name=".MainActivity"
