--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".AboutApp"></activity>
+        <activity android:name=".ProfileAdminActivity"></activity>
+        <activity android:name=".AboutApp" />
         <activity android:name=".web.ContactWebActivity" />
         <activity android:name=".web.ProductWebActivity" />
         <activity android:name=".charts.RadarChartActivity" />
