--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
     // Picture
     implementation 'com.squareup.picasso:picasso:2.3.2'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
